# hack_viral

./: .gitignore  README.md  compose.yaml  docker-compose.yml  main.py  nginx.conf  policy.xml  requirements.txt  start_project.sh
api/: Dockerfile  compose.yaml  main.py  moviepy_config.py  whisper.py  whisper_api.py
api-whisper/: Dockerfile  README.md  docker-compose.yaml  requirements.txt  whisper_api.py
api/utils/: key_moment_extraction.py  metadata_generation.py  post_processing.py  video_analysis.py
app/: main.py
app/static/css/: style.css
app/static/js/: editor.js
app/templates/: editor.html
frontend/hacks-viral-backend/: Dockerfile  pyproject.toml
frontend/hacks-viral-backend/routes/: base.py  video.py
frontend/hacks-viral-backend/utils/: video_processing.py
frontend/hacks-viral-editor/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/hacks-viral-editor/src/: App.tsx  main.tsx
frontend/hacks-viral-frontend/: .env.local  package-lock.json
hacks-viral-backend/: .gitignore  config.py  main.py  test_main.http
hacks-viral-backend/routes/: video.py
hacks-viral-backend/utils/: video_processing.py
hacks-viral-frontend/: .env.local  .gitignore  Dockerfile  README.md  package.json
hacks-viral-frontend/app/(default)/: page.tsx
hacks-viral-frontend/components/video/: clips.tsx  (+1 more)
qwen_vllm/: Dockerfile  compose.yaml  requirements.txt  test.ipynb
utils/: __init__.py  clip_generation.py  key_moment_extraction.py  logging_config.py  metadata_generation.py  post_processing.py  speech_processing.py  video_analysis.py
(+28 files in other folders)
