[tool.poetry]
name = "hacks-viral-backend"
version = "0.1.0"
description = ""
authors = ["Kirill Khvoshchev <kkhvoshchev@ozon.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
python-multipart = "^0.0.10"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
